added user and clinc request models
