# docs/swagger.json
@@ -25,6 +25,35 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "Create a new user",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Create a user",
+                "parameters": [
+                    {
+                        "description": "User details",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/users.UserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/users.User"
+                        }
+                    }
+                }
             }
         },
         "/users/{id}": {
@@ -60,11 +89,50 @@
     "definitions": {
         "users.User": {
             "type": "object",
+            "required": [
+                "email",
+                "lastName",
+                "name",
+                "phoneNumber"
+            ],
             "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
                 "id": {
+                    "type": "string"
+                },
+                "lastName": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "phoneNumber": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "users.UserRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "lastName",
+                "name",
+                "phoneNumber",
+                "role"
+            ],
+            "properties": {
+                "email": {
                     "type": "string"
                 },
                 "lastName": {
